--- a/analysis/synopsis_OIA.Rmd
+++ b/analysis/synopsis_OIA.Rmd
@@ -7643,6 +7643,77 @@ ggsave(
 
 
 acidification_volume %>%
+  filter(sat_level %in% c(1,3,4),
+         estimate == "Loss of sat. volume\n(% preind. vol.)" ) %>% 
+  ggplot(aes(
+    x = pCO2,
+    y = std_case,
+    ymin = std_case - sd,
+    ymax = std_case + sd
+  )) +
+  labs(x = expression(Atmospheric ~ CO[2] ~ (ppm))) +
+  scale_x_continuous(
+    breaks = seq(280, 400, 40),
+    sec.axis = sec_axis(
+      ~ (. - 282.5) * 1.537,
+      breaks = seq(0, 175, 50),
+      name = expression(Oceanic ~ C[ant] ~ storage ~ (PgC))
+    )
+  ) +
+  geom_ribbon(aes(fill = sat_level),
+              alpha = 0.3) +
+  geom_path(aes(col = sat_level, group = sat_level)) +
+  geom_point(aes(fill = sat_level,
+                 shape = sat_level)) +
+  geom_text(
+    data = . %>%
+      filter(
+        estimate == "Loss of sat. volume\n(% preind. vol.)",
+        sat_level == 4,
+        tref != 1800
+      ),
+    aes(label = tref),
+    nudge_y = -7,
+    nudge_x = -4
+  ) +
+  geom_text(
+    data = . %>%
+      filter(
+        estimate == "Loss of sat. volume\n(% preind. vol.)",
+        sat_level == 4,
+        tref == 1800
+      ),
+    aes(label = tref),
+    nudge_y = 7,
+    nudge_x = 4
+  ) +
+  scale_color_viridis_d(name = expression(atop(Ω[arag], threshold)),
+                        end = 0.9) +
+  scale_fill_viridis_d(name = expression(atop(Ω[arag], threshold)),
+                       end = 0.9) +
+  scale_shape_manual(values = 21:27,
+                     name = expression(atop(Ω[arag], threshold))) +
+  theme(
+    axis.title.y = element_blank(),
+    legend.position = c(0.15, 0.47),
+    legend.background = element_rect(fill = "transparent"),
+    strip.background = element_blank(),
+    strip.placement = "outside",
+    strip.text.x = element_markdown()
+  ) +
+  scale_y_continuous(limits = c(-105,0))
+
+
+ggsave(
+  here::here("output/main/volume_omega_saturation_global_presentation.png"),
+  width = 4,
+  height = 3,
+  dpi = 600,
+  bg = "white"
+)
+
+
+acidification_volume %>%
   kable() %>%
   kable_styling() %>%
   scroll_box(height = "300px")
@@ -12654,6 +12725,163 @@ ggsave(
   ),
   width = 7,
   height = 8,
+  dpi = 600,
+  bg = "white"
+)
+
+```
+
+```{r merged_profiles_global_presentations}
+
+p_acid_profiles_global_omega <-
+  acidification_profiles_biomes_uncertainty %>%
+  filter(biome == "Global",
+         variable %in% c("OmegaAragonite")) %>%
+  mutate(variable = factor(variable, levels = c("OmegaAragonite", "H_free", "tco2"))) %>%
+  ggplot() +
+  geom_ribbon(aes(
+    xmin = std_case - sd,
+    xmax = std_case + sd,
+    y = depth,
+    fill = tref
+  ),
+  alpha = 0.3) +
+  geom_path(aes(std_case,
+                depth,
+                col = tref,
+                linewidth = tref)) +
+  scale_color_manual(values = four_year_colors) +
+  scale_fill_manual(values = four_year_colors) +
+  scale_discrete_manual("linewidth", values = c(0.5,rep(1,3))) +
+  labs(y = "Depth (m)") +
+  theme(
+    axis.title = element_blank(),
+    axis.text.y = element_blank(),
+    strip.text.x = element_markdown(),
+    legend.position = "none",
+    legend.key.width = unit(1, "cm"),
+    legend.title = element_blank(),
+    strip.background.x = element_blank(),
+    strip.placement = "outside"
+  ) +
+  facet_wrap(
+    . ~ variable,
+    scales = "free_x",
+    labeller = labeller(variable = x_axis_labels),
+    strip.position = "bottom",
+    ncol = 1
+  ) +
+  scale_y_continuous(
+    trans = trans_reverser("sqrt"),
+    breaks = c(0, 100, 500, seq(1500, 5000, 1000)),
+    limits = c(3000, 0),
+    expand = c(0, 0)
+  )
+
+p_acid_profiles_global_H_free <-
+  acidification_profiles_biomes_uncertainty %>%
+  filter(biome == "Global",
+         variable %in% c("H_free")) %>%
+  mutate(variable = factor(variable, levels = c("OmegaAragonite", "H_free", "tco2"))) %>%
+  ggplot() +
+  geom_ribbon(aes(
+    xmin = std_case - sd,
+    xmax = std_case + sd,
+    y = depth,
+    fill = tref
+  ),
+  alpha = 0.3) +
+  geom_path(aes(std_case,
+                depth,
+                col = tref,
+                linewidth = tref)) +
+  scale_color_manual(values = four_year_colors) +
+  scale_fill_manual(values = four_year_colors) +
+  scale_discrete_manual("linewidth", values = c(0.5,rep(1,3))) +
+  labs(y = "Depth (m)") +
+  theme(
+    axis.title = element_blank(),
+    axis.text.y = element_blank(),
+    strip.text.x = element_markdown(),
+    legend.position = "none",
+    legend.key.width = unit(1, "cm"),
+    legend.title = element_blank(),
+    strip.background.x = element_blank(),
+    strip.placement = "outside"
+  ) +
+  facet_wrap(
+    . ~ variable,
+    scales = "free_x",
+    labeller = labeller(variable = x_axis_labels),
+    strip.position = "bottom", ncol = 1
+  ) +
+  scale_y_continuous(
+    trans = trans_reverser("sqrt"),
+    breaks = c(0, 100, 500, seq(1500, 5000, 1000)),
+    limits = c(3000, 0),
+    expand = c(0, 0)
+  )
+
+
+
+p_tco2_profiles_global <-
+  acidification_profiles_biomes_uncertainty %>%
+  filter(biome == "Global",
+         variable %in% c("tco2")) %>%
+  mutate(variable = factor(variable, levels = c("OmegaAragonite", "H_free", "tco2"))) %>%
+  ggplot() +
+  geom_ribbon(aes(
+    xmin = std_case - sd,
+    xmax = std_case + sd,
+    y = depth,
+    fill = tref
+  ),
+  alpha = 0.3) +
+  geom_path(aes(std_case,
+                depth,
+                col = tref,
+                linewidth = tref)) +
+  scale_color_manual(values = four_year_colors) +
+  scale_fill_manual(values = four_year_colors) +
+  scale_discrete_manual("linewidth", values = c(0.5,rep(1,3))) +
+  labs(y = "Depth (m)") +
+  theme(
+    axis.title.x = element_blank(),
+    strip.text.x = element_markdown(),
+    legend.key.width = unit(1, "cm"),
+    legend.title = element_blank(),
+    legend.position = c(0.7,0.3),
+    legend.background = element_rect(fill = "transparent"),
+    strip.background.x = element_blank(),
+    strip.placement = "outside"
+  ) +
+  facet_wrap(
+    . ~ variable,
+    scales = "free_x",
+    labeller = labeller(variable = x_axis_labels),
+    strip.position = "bottom", ncol = 1
+  ) +
+  scale_y_continuous(
+    trans = trans_reverser("sqrt"),
+    breaks = c(0, 100, 500, seq(1500, 5000, 1000)),
+    limits = c(3000, 0),
+    expand = c(0, 0)
+  )
+
+p_tco2_profiles_global +
+  p_acid_profiles_global_omega +
+  p_acid_profiles_global_H_free +
+  plot_layout(ncol = 3)
+
+
+ggsave(
+  here::here(
+    paste0(
+      "output/main/profiles_total_changes_global_presentation.png"
+    )
+  ),
+  width = 6,
+  height = 3,
   dpi = 600,
   bg = "white"
 )
